Added Internet permission to manifest. Spam class renamed to UDPWork. Now this class uses UDP for sending and receiving broadcasts.  Received broadcasts displayed on ListView.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="org.jukov.lanchat">
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     
     <application
         android:allowBackup="true"
